# dacon_ch

./: .gitignore  analyze.ipynb  autorun.sh  baseline_dacon.ipynb  car_dataset.py  class_merge.py  config.py  datasets.py  evaluate.py  evaluation_metric.ipynb  inference.py  main.py  model.py  models.py  pyproject.toml  run_on_hosting.sh  train.py  transforms.py  utils.py
dacon/: evaluation_metric.ipynb
sub_models/: car_type_classifier.py
